:meat_on_bone: improvments to the footer - added flex for better layout - also got some improvments in on the drop cap and in the hero  - fixed overflow in the header

--- a/themes/dcnmTheme/assets/sass/partial/exception/_dropCaps.scss
+++ b/themes/dcnmTheme/assets/sass/partial/exception/_dropCaps.scss
@@ -9,8 +9,8 @@
     float: left;
     font-family: $serif;
     font-size: var(--s3);
-    font-weight: 500;
-    margin: 0.1em 0.1em 0 0;
+    font-weight: 900;
+    margin: 0.1em 0.05em 0 0;
 
     @media screen and (max-width: $small-screen) {
       line-height: 0.35em;
